--- a/index.html
+++ b/index.html
@@ -87,6 +87,48 @@
             </div>
         </section>
         <!-- hero end -->
+        <!--PROVISION  start-->
+        <section class="provision-section">
+            <div class="container">
+                <div class="provision">
+                    <div class="provision__content">
+                        <h1 class="provision__content-title">
+                            XIZMAT KO'RSATISH MARKAZI <br> <span>EKO-XIZMAT</span> <br> TOSHKENT
+                        </h1>
+                        <p class="provision__content-text">
+                            Biz sizni o'rab turgan texnologiyani hayotga olib chiqamiz!
+                        </p>
+                        <ul class="provision__content-item">
+                            <li class="provision__content-item-list">
+                                Diagnostika bepul
+                            </li>
+                            <li class="provision__content-item-list">
+                                Magistrning ketishi bepul
+                            </li>
+                            <li class="provision__content-item-list">
+                                365 kundan boshlab kafolat
+                            </li>
+                            <li class="provision__content-item-list">
+                                1 kun ichida har qanday ta'mirlash
+                            </li>
+                            <li class="provision__content-item-list">
+                                Magistrlarning tajribasi 10 yildan ortiq
+                            </li>
+                            <li class="provision__content-item-list">
+                                Shaxsiy menejer
+                            </li>
+                        </ul>
+                        <a class="provision__content-link" href="#"  data-bs-toggle="modal" data-bs-target="#myAccount">Qo'ng'iroqni talab qiling</a>
+                        <span class="provision__content-span">
+                            Qo'ng'iroq 30 soniya ichida keladi
+                        </span>
+                    </div>
+                    <div class="provision__img">
+                        <img src="./img/person.png" alt="person">
+                    </div>
+                </div>
+            </div>
+        </section>
         
     </main>
     <!-- main end -->
