--- a/index.html
+++ b/index.html
@@ -129,6 +129,127 @@
                 </div>
             </div>
         </section>
+        <section class="technologies-section">
+            <div class="container">
+                <div class="technologies">
+                    <h2 class="technologies__title">
+                        Biz barcha turdagi texnologiyalar bilan ishlaymiz
+                    </h2>
+                    <p class="technologies__text">
+                        Ta'mirlamoqchi bo'lgan narsani tanlang:
+                    </p>
+                    <ul class="technologies__item">
+                        <li class="technologies__item-list">
+                            <div class="technologies__item-list-img position">
+                                <img src="./img/tech-01.png" alt="APPLIANCES" width="167" height="164">
+                            </div>
+                            <div class="technologies__item-list-content">
+                                <h3>KATTA MAISHIY TEXNIKA VOSITALARINI TA'MIRLASH</h3>
+                                <ul>
+                                    <li>
+                                        <a href="#">Sovutgichni ta'mirlash</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Kir yuvish mashinalarini ta'mirlash</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Quritgichni ta'mirlash</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Idish yuvish mashinasini ta'mirlash</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Konditsionerni ta'mirlash</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Elektr pechkalarini ta'mirlash</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Pechni ta'mirlash</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="technologies__item-list">
+                            <div class="technologies__item-list-img position">
+                                <img src="./img/tech-04.png" alt="APPLIANCES" width="209" height="93">
+                            </div>
+                            <div class="technologies__item-list-content">
+                                <h3>IQLIM USKUNALARINI TA'MIRLASH</h3>
+                                <ul>
+                                    <li>
+                                        <a href="#">Konditsionerni ta'mirlash</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Gaz qozonlarini ta'mirlash</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="technologies__item-list">
+                            <div class="technologies__item-list-img padding-top">
+                                <img src="./img/tech-05.png" alt="APPLIANCES" width="209" height="147">
+                            </div>
+                            <div class="technologies__item-list-content">
+                                <h3>KOMPYUTER USHBOZALARINI TA'MIRLASH</h3>
+                                <ul>
+                                    <li>
+                                        <a href="#">Noutbuk ta'mirlash</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Kompyuter ta'mirlash</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Monoblokni ta'mirlash</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="technologies__item-list">
+                            <div class="technologies__item-list-img padding-top">
+                                <img src="./img/tech-06.png" alt="APPLIANCES" width="209" height="147">
+                            </div>
+                            <div class="technologies__item-list-content">
+                                <h3>RAQAMLI USKUNALARNI TA'MIRLASH</h3>
+                                <ul>
+                                    <li>
+                                        <a href="#">Televizorni ta'mirlash</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="technologies__item-list">
+                            <div class="technologies__item-list-img padding-top">
+                                <img src="./img/tech-07.png" alt="APPLIANCES" width="209" height="147">
+                            </div>
+                            <div class="technologies__item-list-content">
+                                <h3>MAISHIY TEXNIKA VOSITALARINI TA’MIRLASH</h3>
+                                <ul>
+                                    <li>
+                                        <a href="#">Kofe mashinasini ta'mirlash</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="technologies__box">
+                        <p>
+                            Sizning turdagi texnologiyangizni topa olmadingizmi? Keyin qo'ng'iroq qiling yoki so'rov qoldiring va operator sizga kompaniyamizning barcha xizmatlari bo'yicha maslahat beradi!
+                        </p>
+                        <a class="technologies__box-link" href="#"  data-bs-toggle="modal" data-bs-target="#myAccount">Savol bering</a>
+                        <div class="technologies__box-texts">
+                            <a href="tel:+998912989808">
+                                <span>+(998)</span> 
+                                <strong>91 298 98 08</strong>
+                            </a>
+                            <span>
+                                Yagona xizmat raqami 10:00 dan  <b>19:00 gacha ishlaydi</b>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         
     </main>
     <!-- main end -->
