--- a/index.html
+++ b/index.html
@@ -57,6 +57,32 @@
                     <ul class="hero__item">
                         <li class="hero__item-list">
                             <a class="hero__item-link" href="#">Xizmatlar katalogi </a>
+                            <ul class="hero__item-list-dropdovn">
+                                <li>
+                                    Maishiy texnika vositalarini ta’mirlash
+                                </li>
+                                <li>
+                                    Kompyuter ushbozalarini ta'mirlash
+                                </li>
+                                <li>
+                                    Organ joshinalarini ta'mirlash
+                                </li>
+                                <li>
+                                    Katta maishiy texnika vositalarini ta'mirlash
+                                </li>
+                                <li>
+                                    Raqamli uskunalarni ta'mirlash
+                                </li>
+                                <li>
+                                    Elektr transportini ta'mirlash
+                                </li>
+                                <li>
+                                    Iqlim uskunalarini ta'mirlash
+                                </li>
+                                <li>
+                                    Soat ta'mirlash
+                                </li>
+                            </ul>
                         </li>
                         <li class="hero__item-list">
                             <a class="hero__item-link" href="#">Biz boshqa mamlakatlardamiz </a>
@@ -250,7 +276,6 @@
                 </div>
             </div>
         </section>
-        
     </main>
     <!-- main end -->
 
