add standards pages

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <ul class="hero__item">
                         <li class="hero__item-list">
                             <a class="hero__item-link" href="#">Xizmatlar katalogi </a>
-                            <ul class="hero__item-list-dropdovn">
+                            <!-- <ul class="hero__item-list-dropdovn">
                                 <li>
                                     Maishiy texnika vositalarini ta’mirlash
                                 </li>
@@ -82,7 +82,7 @@
                                 <li>
                                     Soat ta'mirlash
                                 </li>
-                            </ul>
+                            </ul> -->
                         </li>
                         <li class="hero__item-list">
                             <a class="hero__item-link" href="#">Biz boshqa mamlakatlardamiz </a>
@@ -107,6 +107,83 @@
                         </li>
                         <li class="hero__item-list">
                             <a class="hero__item-link" href="control.html">Sifat nazorati </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="dropdovn">
+                <div class="container">
+                    <ul class="hero__item-list-dropdovn">
+                        <li class="hero__item-list-dropdovn-list">
+                            Maishiy texnika vositalarini ta’mirlash
+                            <i class="fa fa-angle-right"></i>
+                        </li>
+                        <li class="hero__item-list-dropdovn-list">
+                            Kompyuter ushbozalarini ta'mirlash
+                            <i class="fa fa-angle-right"></i>
+                        </li>
+                        <li class="hero__item-list-dropdovn-list">
+                            Organ joshinalarini ta'mirlash
+                            <i class="fa fa-angle-right"></i>
+                        </li>
+                        <li class="hero__item-list-dropdovn-list">
+                            Katta maishiy texnika vositalarini ta'mirlash
+                            <i class="fa fa-angle-right"></i>
+                        </li>
+                        <li class="hero__item-list-dropdovn-list">
+                            Raqamli uskunalarni ta'mirlash
+                            <i class="fa fa-angle-right"></i>
+                        </li>
+                        <li class="hero__item-list-dropdovn-list">
+                            Elektr transportini ta'mirlash
+                            <i class="fa fa-angle-right"></i>
+                        </li>
+                        <li class="hero__item-list-dropdovn-list">
+                            Iqlim uskunalarini ta'mirlash
+                            <i class="fa fa-angle-right"></i>
+                        </li>
+                        <li class="hero__item-list-dropdovn-list" >
+                            Soat ta'mirlash
+                            <i class="fa fa-angle-right"></i>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="dropdovn-two">
+                <div class="container">
+                    <ul class="hero__item-list-dropdovn">
+                        <li class="hero__item-list-dropdovn-list">
+                            Maishiy texnika vositalarini ta’mirlash
+                            <i class="fa fa-angle-right"></i>
+                        </li>
+                        <li class="hero__item-list-dropdovn-list">
+                            Kompyuter ushbozalarini ta'mirlash
+                            <i class="fa fa-angle-right"></i>
+                        </li>
+                        <li class="hero__item-list-dropdovn-list">
+                            Organ joshinalarini ta'mirlash
+                            <i class="fa fa-angle-right"></i>
+                        </li>
+                        <li class="hero__item-list-dropdovn-list">
+                            Katta maishiy texnika vositalarini ta'mirlash
+                            <i class="fa fa-angle-right"></i>
+                        </li>
+                        <li class="hero__item-list-dropdovn-list">
+                            Raqamli uskunalarni ta'mirlash
+                            <i class="fa fa-angle-right"></i>
+                        </li>
+                        <li class="hero__item-list-dropdovn-list">
+                            Elektr transportini ta'mirlash
+                            <i class="fa fa-angle-right"></i>
+                        </li>
+                        <li class="hero__item-list-dropdovn-list">
+                            Iqlim uskunalarini ta'mirlash
+                            <i class="fa fa-angle-right"></i>
+                        </li>
+                        <li class="hero__item-list-dropdovn-list" >
+                            Soat ta'mirlash
+                            <i class="fa fa-angle-right"></i>
                         </li>
                     </ul>
                 </div>
@@ -272,6 +349,30 @@
                                 Yagona xizmat raqami 10:00 dan  <b>19:00 gacha ishlaydi</b>
                             </span>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="standards-section">
+            <div class="container">
+                <div class="standards">
+                    <div class="standards__content">
+                        <h3 class="standards__content-title">
+                            Uskunalarga texnik xizmat ko'rsatish standartlarini o'rnatdik
+                        </h3>
+
+                    </div>
+                    <div class="standards__right">
+                        <p>
+                            So'nggi 6 yildagi statistik ma'lumotlarga
+                        </p>
+                        <strong>e'tibor bering :</strong>
+                        <img src="./img/sakkiz.png" alt="80 %" width="380" height="165">
+                        <span>
+                            <b>Mijozlar</b>  o'z xavfsizligi uchun maxsus va keng yo'naltirilgan xizmat ko'rsatish markazlari tomonidan tanlanadi !
+                        </span>
                     </div>
                 </div>
             </div>
